test/errors/error16.vult

fun foo() {
   val x = NonExisting.foo();
}
